Upgrade to java 9 and other dependency updates. Expanded instructions.